# yudou-collect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: clean  clean.yml  collect.yml
nodejs/: .prettierrc  collect.js  package-lock.json  package.json
output/: clash.yaml  v2ray.txt
python/: collect.py  pyproject.toml  requirements.txt
src/: main.py
src/collectors/: __init__.py  base.py  collector_85la.py  collector_cfmem.py  collector_datia.py  collector_jichangx.py  collector_nodefree.py  collector_oneclash.py  collector_yudou.py
src/nodejs/: collect.js  package-lock.json  package.json
src/python/: collect.py
