[project]
name = "yudou-collect"
version = "1.1.1"
description = "yudou-collect"
requires-python = ">=3.13"
dependencies = [
    "lxml==6.0.1",
    "pycryptodome==3.23.0",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250809",
    "types-lxml>=2025.8.25",
]



