[project]
name = "yudou-collect"
version = "1.1.1"
description = "yudou-collect"
requires-python = ">=3.13"
dependencies = [
    "lxml==6.0.1",
    "pycryptodome==3.23.0",
    "requests[socks]==2.32.5",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250809",
    "types-lxml>=2025.8.25",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"



